--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,10 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/selkamand/universe
 	shallow = true
 	branch = HEAD
+[submodule "utilitybeltgg"]
+	path = utilitybeltgg
+	url = https://github.com/selkamand/utilitybeltgg
+	shallow = true
+	registered = true
