--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,8 @@
 	url = https://github.com/selkamand/utilitybeltassertions
 	shallow = true
 	registered = true
+[submodule "golem"]
+	path = golem
+	url = https://github.com/Thinkr-open/golem
+	shallow = true
+	registered = false
