--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,18 @@
 	url = https://github.com/selkamand/utilitybeltgg
 	shallow = true
 	registered = true
+[submodule "utilitybeltshiny"]
+	path = utilitybeltshiny
+	url = https://github.com/selkamand/utilitybeltshiny
+	shallow = true
+	registered = true
+[submodule "utilitybeltlists"]
+	path = utilitybeltlists
+	url = https://github.com/selkamand/utilitybeltlists
+	shallow = true
+	registered = true
+[submodule "utilitybeltassertions"]
+	path = utilitybeltassertions
+	url = https://github.com/selkamand/utilitybeltassertions
+	shallow = true
+	registered = true
