--- a/.gitmodules
+++ b/.gitmodules
@@ -15,6 +15,10 @@
 [submodule "gg1d"]
 	path = gg1d
 	url = https://github.com/selkamand/gg1d
+[submodule "ggEDA"]
+	path = ggEDA
+	url = https://github.com/CCICB/ggEDA
+	registered = false
 [submodule "ggoncoplot"]
 	path = ggoncoplot
 	url = https://github.com/selkamand/ggoncoplot
@@ -28,10 +32,6 @@
 [submodule "mutationtypes"]
 	path = mutationtypes
 	url = https://github.com/selkamand/mutationtypes
-	registered = false
-[submodule "rank"]
-	path = rank
-	url = https://github.com/selkamand/rank
 	registered = false
 [submodule "utilitybeltassertions"]
 	path = utilitybeltassertions
